--- a/src/index.html
+++ b/src/index.html
@@ -7,19 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta content="Pyn Pon" name="description" />
   <meta property="og:site_name"/>
-
   <meta property="og:title"/>
-
   <meta property="og:description"/>
-
   <meta property="og:image"/>
-
-<meta property="og:url"
-  content="https://pynpon.page/" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta property="og:url"/>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
