--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TheMovieDb</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta content="Pyn Pon" name="description" />
+  <meta property="og:type" content="website" />
   <meta property="og:site_name"/>
   <meta property="og:title"/>
   <meta property="og:description"/>
   <meta property="og:image"/>
+  <meta property="og:image:width" content="828" />
+  <meta property="og:image:height" content="450" />
   <meta property="og:url"/>
 </head>
 <body class="mat-typography">
