--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <meta property="og:image:width" content="828" />
   <meta property="og:image:height" content="450" />
   <meta property="og:url"/>
+  <meta property="fb:app_id" content="928977633900253" />
 </head>
 <body class="mat-typography">
   <app-root></app-root>
