:art: develop feat(Seo) Integrate SEO

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
-<head>
+<html lang="en" prefix="og: https://themovieandtvserie.netlify.app#">
+<head prefix="my_namespace: https://themovieandtvserie.netlify.app#">
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:type" content="website" />
+  <meta property="og:type" content="my_namespace:website" />
   <meta property="og:site_name"/>
   <meta property="og:title"/>
   <meta property="og:description"/>
