--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,10 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:type" content="my_namespace:website" />
-  <meta property="og:site_name"/>
-  <meta property="og:title"/>
-  <meta property="og:description"/>
-  <meta property="og:image"/>
-  <meta property="og:image:width" content="828" />
-  <meta property="og:image:height" content="450" />
-  <meta property="og:url"/>
+  <meta property="og:title" content="The Rock" />
+  <meta property="og:type" content="video.movie" />
+  <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+  <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
 </head>
 <body class="mat-typography">
   <app-root></app-root>
