:art: develop feat(Seo) Integrate SEO

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="en" prefix="og: https://themovieandtvserie.netlify.app#">
-<head prefix="my_namespace: https://themovieandtvserie.netlify.app#">
+<html lang="en" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
+<head>
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
