--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <meta property="og:type" content="video.movie" />
   <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
   <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+  <meta property="og:image:width" content="600" />
+  <meta property="og:image:height" content="315" />
+  <meta property="fb:app_id" content="928977633900253" />
 </head>
 <body class="mat-typography">
   <app-root></app-root>
