--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="The Rock" />
-  <meta property="og:type" content="video.movie" />
+  <meta property="og:type" content="product" />
   <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
   <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
-  <meta property="og:image:width" content="600" />
-  <meta property="og:image:height" content="315" />
+  <meta property="og:image:width" content="850">
+  <meta property="og:image:height" content="450">
+  <meta property="og:image:type" content="image/jpg" />
   <meta property="fb:app_id" content="928977633900253" />
 </head>
 <body class="mat-typography">
