:art: develop feat(Seo) Integrate SEO

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 <head>
   <meta charset="utf-8">
+  <title>The movie DB</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="The Rock" />
   <meta property="og:type" content="product" />
+  <meta property="og:description" content="product shfo" />
   <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
   <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
   <meta property="og:image:width" content="850">
