--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta property="og:type" content="product" />
   <meta property="og:description" content="product shfo" />
   <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-  <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+  <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BMTc2NTQ4MjcwOV5BMl5BanBnXkFtZTgwNDUxMjE3MjI@._V1_.jpg" />
   <meta property="og:image:width" content="850">
   <meta property="og:image:height" content="450">
   <meta property="og:image:type" content="image/jpg" />
