:art: develop feat(Seo) Integrate SEO

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,12 @@
   <title>The movie DB</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="The Rock" />
-  <meta property="og:type" content="product" />
-  <meta property="og:description" content="product shfo" />
-  <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-  <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BMTc2NTQ4MjcwOV5BMl5BanBnXkFtZTgwNDUxMjE3MjI@._V1_.jpg" />
+  <meta property="og:title" content="TheMovieDB">
+  <meta property="og:site_name" content="The movies and tv series">
+  <meta property="og:url" content="https://themovieandtvserie.netlify.app/"">
+  <meta property="og:description" content="Pagina para buscar peliculas y series">
+  <meta property="og:type" content="product">
+  <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BMTc2NTQ4MjcwOV5BMl5BanBnXkFtZTgwNDUxMjE3MjI@._V1_.jpg">
   <meta property="og:image:width" content="850">
   <meta property="og:image:height" content="450">
   <meta property="og:image:type" content="image/jpg" />
