:art: develop feat(Seo) Integrate SEO

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="TheMovieDB">
   <meta property="og:site_name" content="The movies and tv series">
-  <meta property="og:url" content="https://themovieandtvserie.netlify.app/"">
+  <meta property="og:url" content="https://themovieandtvserie.netlify.app/">
   <meta property="og:description" content="Pagina para buscar peliculas y series">
   <meta property="og:type" content="product">
   <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BMTc2NTQ4MjcwOV5BMl5BanBnXkFtZTgwNDUxMjE3MjI@._V1_.jpg">
