--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
   <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BMTc2NTQ4MjcwOV5BMl5BanBnXkFtZTgwNDUxMjE3MjI@._V1_.jpg">
   <meta property="og:image:width" content="850">
   <meta property="og:image:height" content="450">
-  <meta property="og:image:type" content="image/jpg" />
-  <meta property="fb:app_id" content="928977633900253" />
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="fb:app_id" content="928977633900253">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
