--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
   <meta property="og:url" content="https://themovieandtvserie.netlify.app/">
   <meta property="og:description" content="Pagina para buscar peliculas y series">
   <meta property="og:type" content="product">
-  <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BMTc2NTQ4MjcwOV5BMl5BanBnXkFtZTgwNDUxMjE3MjI@._V1_.jpg">
+  <meta property="og:image" content="https://storage.googleapis.com/waykka/p2pOffer-chat/YiFldlnZiIXRx4t1iO1Xsm8aub5Bw3.png">
   <meta property="og:image:width" content="850">
   <meta property="og:image:height" content="450">
-  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:type" content="image/png">
   <meta property="fb:app_id" content="928977633900253">
 </head>
 <body class="mat-typography">
